// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a disabled checkout button where cart is empty 1`] = `
<MiniBag
  cart={
    Object {
      "lineItems": Array [],
      "totalQuantity": 0,
    }
  }
  dispatch={[Function]}
>
  <div
    className="c-header__minibag"
  >
    <Link
      href="/cart"
    >
      <div
        className="c-minibag__cart"
        onClick={[Function]}
      >
        <div
          className="c-minibag__cart-image"
        >
          <div
            className="c-minibag__cart-image-count"
          >
            0
          </div>
          <Image
            className="c-minibag__cart-image-icon"
            src="/static/bag-icon.svg"
          >
            <div
              className="c-minibag__cart-image-icon"
            >
              <LazyLoad
                debounce={true}
                elementType="div"
                offset={0}
                offsetBottom={0}
                offsetHorizontal={0}
                offsetLeft={0}
                offsetRight={0}
                offsetTop={0}
                offsetVertical={0}
                throttle={250}
              >
                <div
                  className="LazyLoad"
                  style={
                    Object {
                      "height": undefined,
                      "width": undefined,
                    }
                  }
                />
              </LazyLoad>
            </div>
          </Image>
        </div>
        <a
          href="/cart"
        >
          Basket
        </a>
      </div>
    </Link>
    <div
      className="c-minibag__checkout"
    >
      <Link
        href=""
      >
        <Button
          aria-label="Go to checkout"
          className="o-button--disabled"
          label="Checkout"
          onClick={[Function]}
          status="primary"
        >
          <div
            className="o-button__container"
          >
            <button
              aria-label="Go to checkout"
              className="o-button--disabled o-button o-button--primary"
              disabled={false}
              onClick={[Function]}
              role="button"
              tabIndex="0"
            >
              Checkout
            </button>
          </div>
        </Button>
      </Link>
    </div>
  </div>
</MiniBag>
`;

exports[`renders an active checkout button where cart has items 1`] = `
<MiniBag
  cart={
    Object {
      "lineItems": Array [
        Object {
          "discount": 0,
          "image_url": "",
          "price": 10,
          "productID": 1,
          "productSku": "1231",
          "quantity": 2,
          "size": "size - 8",
          "sku": "123",
          "title": "test",
        },
      ],
      "totalQuantity": 2,
    }
  }
  dispatch={[Function]}
>
  <div
    className="c-header__minibag"
  >
    <Link
      href="/cart"
    >
      <div
        className="c-minibag__cart"
        onClick={[Function]}
      >
        <div
          className="c-minibag__cart-image"
        >
          <div
            className="c-minibag__cart-image-count"
          >
            2
          </div>
          <Image
            className="c-minibag__cart-image-icon"
            src="/static/bag-icon.svg"
          >
            <div
              className="c-minibag__cart-image-icon"
            >
              <LazyLoad
                debounce={true}
                elementType="div"
                offset={0}
                offsetBottom={0}
                offsetHorizontal={0}
                offsetLeft={0}
                offsetRight={0}
                offsetTop={0}
                offsetVertical={0}
                throttle={250}
              >
                <div
                  className="LazyLoad"
                  style={
                    Object {
                      "height": undefined,
                      "width": undefined,
                    }
                  }
                />
              </LazyLoad>
            </div>
          </Image>
        </div>
        <a
          href="/cart"
        >
          Basket
        </a>
      </div>
    </Link>
    <div
      className="c-minibag__checkout"
    >
      <Link
        href="/checkout"
      >
        <Button
          aria-label="Go to checkout"
          className=""
          label="Checkout"
          onClick={[Function]}
          status="primary"
        >
          <div
            className="o-button__container"
          >
            <button
              aria-label="Go to checkout"
              className="o-button o-button--primary"
              disabled={false}
              onClick={[Function]}
              role="button"
              tabIndex="0"
            >
              Checkout
            </button>
          </div>
        </Button>
      </Link>
    </div>
  </div>
</MiniBag>
`;

exports[`renders the minibag links 1`] = `
<div
  className="c-header__minibag"
>
  <Link
    href="/cart"
  >
    <div
      className="c-minibag__cart"
    >
      <div
        className="c-minibag__cart-image"
      >
        <div
          className="c-minibag__cart-image-count"
        >
          0
        </div>
        <Image
          className="c-minibag__cart-image-icon"
          src="/static/bag-icon.svg"
        />
      </div>
      <a
        href="/cart"
      >
        Basket
      </a>
    </div>
  </Link>
  <div
    className="c-minibag__checkout"
  >
    <Link
      href=""
    >
      <Button
        aria-label="Go to checkout"
        className="o-button--disabled"
        label="Checkout"
        status="primary"
      />
    </Link>
  </div>
</div>
`;
